*** empty log message ***

--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
@@ -91,7 +91,7 @@ duration=Duration
 
 node=Node
 
-datastorage.init.confirm=Confirm data storage initialization? All data in the storage will be erased.
+datastorage.init.confirm=Confirm data storage initialization? \nAll data in the storage will be erased.
 
 reports=Reports
 
@@ -145,7 +145,7 @@ file.type.pdf=PDF (.pdf)
 
 jobs.tree=Jobs tree
 
-report.successfully.generated.at=Report successfully generated. It is available at
+report.successfully.generated.at=Report successfully generated. \nIt is available at
 
 report.successfully.generated=Report successfully generated
 
@@ -183,7 +183,7 @@ stop.current.progress.confirm=Current progress will be stopped. Confirm?
 
 subtree.work.ring.chart=Subtree work ring chart
 
-delete.node.confirm=You have choosen to delete a job.\nContinuing you will loose all its progresses. \nDo you want to continue?
+delete.node.confirm=You have choosen to delete a job. \nContinuing you will loose all its progresses. \nContinue anyway?
 
 control.panel=Control panel
 
@@ -201,9 +201,9 @@ charts=Charts
 
 ring.chart.auto.load=Ring chart auto load
 
-delete.project.confirm=You have choosen to deletie a project.\n Continuing you will loose all its nodes and progresses. \nDo you want to continue?
+delete.project.confirm=You have choosen to deletie a project. \nContinuing you will loose all its nodes and progresses. \nContinue anyway?
 
-project.import.conflict.resolution.overwrite.confirm=You have choosen to overwrite an existing project.  Overwriting old data will be lost.  Do you really want to continue?
+project.import.conflict.resolution.overwrite.confirm=You have choosen to overwrite an existing project. \nOverwriting old data will be lost. \nContinue anyway?
 
 project=project
 
@@ -237,7 +237,7 @@ ring.chart=Ring chart
 
 subtree.work.bar.graph=Subtree work bar graph
 
-delete.progress.confirm=You have chosen to delete a progress. \nContinuing you will loose that progrtess permanently\! \nDo you want to continue?
+delete.progress.confirm=You have chosen to delete a progress. \nContinuing you will loose that progrtess permanently\! \nContinue anyway?
 
 legenda=Legenda
 
@@ -267,7 +267,7 @@ importing.project=importing project
 
 exmporting.project=exporting project
 
-File.overwrite.confirm=File exists.  Continuing will cause original file loss.  Do you really want to continue?
+File.overwrite.confirm=File exists. \nContinuing will cause original file loss. \nContinue anyway?
 
 job=job
 
@@ -278,3 +278,5 @@ cancel=cancel
 New.progress=New progress
 
 Progress.start.options=Progress start options
+
+Illegal.operation=Illegal operation
