--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
@@ -280,3 +280,27 @@ New.progress=New progress
 Progress.start.options=Progress start options
 
 Illegal.operation=Illegal operation
+
+Previous=Previous
+
+Finish=Finish
+
+Next=Next
+
+Help=Help
+
+Cancel=Cancel
+
+Datastore.configuration.wizard=Datastore configuration wizard
+
+Ok=Ok
+
+Choose.datastore.directory=Choose datastore directory
+
+datastore.config.wizard.dir.path.explain.HTML=<P>Choose the directory where data will be stored.<BR><I>Please note that you need to have write permissions on that directory.</I></P><P>
+
+datastore.config.wizard.datastore.name.explain.HTML=<P>Enter any the name for the datastore..<BR><I>Please note that cannot exist more than one datastore with the same name at same time on a given directory.</I></P><P>
+
+datastore.config.wizard.welcome.HTML=<P>Welcome to the <B>Datastore configuration wizard</B>.<BR>You will be guided to configure your application data persistence.</P><P>
+
+Press.next.to.continue=Press "Next" to continue
