--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
@@ -121,3 +121,7 @@ actions.new.progress.terminated=New  progress (terminated)
 actions.new.progress=New progress
 
 actions.new.progress.tooltip=Create a new progress
+
+tools.datastore.wizard.tooltip=Datastore configuration wizard
+
+tools.datastore.wizard=Datastore wizard
