ConsoleLogger e persistenza UI

--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
@@ -125,3 +125,5 @@ actions.new.progress.tooltip=Create a new progress
 tools.datastore.wizard.tooltip=Datastore configuration wizard
 
 tools.datastore.wizard=Datastore wizard
+
+tools.log_console=Log console
