--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
@@ -304,3 +304,5 @@ datastore.config.wizard.datastore.name.explain.HTML=<P>Enter any the name for th
 datastore.config.wizard.welcome.HTML=<P>Welcome to the <B>Datastore configuration wizard</B>.<BR>You will be guided to configure your application data persistence.</P><P>
 
 Press.next.to.continue=Press "Next" to continue
+
+Log_frame=Log window
