--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
@@ -306,3 +306,5 @@ datastore.config.wizard.welcome.HTML=<P>Welcome to the <B>Datastore configuratio
 Press.next.to.continue=Press "Next" to continue
 
 Log_frame=Log window
+
+project.inspector=Project inspactor
