--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
@@ -127,3 +127,9 @@ tools.datastore.wizard.tooltip=Datastore configuration wizard
 tools.datastore.wizard=Datastore wizard
 
 tools.log_console=Log console
+
+actions.editproject=Edit
+
+actions.editproject.tooltip=Edit current project
+
+actions.saveproject.tooltip=Save current project
