*** empty log message ***

--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
@@ -24,7 +24,7 @@ description=Description
 
 notes=Notes
 
-confirm=confirm
+confirm=Confirm
 
 progresses=Progresses
 
@@ -173,7 +173,7 @@ progressitem.choice=Job choice
 
 choose.ringchart.root=Choose ring chart root
 
-update=update
+update=Update
 
 choose.root=Choose root
 
