--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/menu.properties
@@ -114,9 +114,9 @@ project.delete=Delete
 
 tools.reports.tooltip=Show report launch dialog
 
-actions.new.progress.terminated.tooltip=Create a terminated progress
+actions.new.progress.terminated.tooltip=Create a finished progress
 
-actions.new.progress.terminated=New  progress (terminated)
+actions.new.progress.terminated=New  progress (finished)
 
 actions.new.progress=New progress
 
