*** empty log message ***

--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
@@ -308,3 +308,9 @@ Press.next.to.continue=Press "Next" to continue
 Log_frame=Log window
 
 project.inspector=Project inspactor
+
+hours=hours
+
+mins=mins
+
+secs=secs
