--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/about.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/about.properties
@@ -1,6 +1,6 @@
 # Sample ResourceBundle properties file
 
-applicationinfo=<HTML><P>This application i s provider AS-IS without any warranty...</HTML>
+applicationinfo=<HTML><P>This application is provided AS-IS without any warranty...</HTML>
 
 product.version=Version number
 
