*** empty log message ***

--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
@@ -273,7 +273,7 @@ job=job
 
 progress.in.subtree=active progress in subtree
 
-cancel=cancel
+cancel=Cancel
 
 New.progress=New progress
 
@@ -314,3 +314,5 @@ hours=hours
 mins=mins
 
 secs=secs
+
+hhmmss=hh/mm/ss
