modifiche da Cardinis

--- a/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
+++ b/yoyodyne/DIR/com/ost/timekeeper/ui/bundle/controls.properties
@@ -307,7 +307,7 @@ Press.next.to.continue=Press "Next" to continue
 
 Log_frame=Log window
 
-project.inspector=Project inspactor
+project.inspector=Project inspector
 
 hours=hours
 
@@ -316,3 +316,5 @@ mins=mins
 secs=secs
 
 hhmmss=hh/mm/ss
+
+Today=Today
