--- a/yoyodyne/DIR/timekeeper/deploy/build.properties
+++ b/yoyodyne/DIR/timekeeper/deploy/build.properties
@@ -31,4 +31,6 @@ genkey.dname.s=Italy
 # COdice stato
 genkey.dname.c=IT
 #inibisce offuscamento bytecode
-obfuscationDenied=true
+#obfuscationDenied=true
+
+#compileWithDebugSymbols=true
