*** empty log message ***

--- a/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/res.properties
+++ b/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/res.properties
@@ -85,3 +85,13 @@ Select_a_predefinned_Locale=Select a predefinned Locale
 &Delete_Entry=Delete Entry
 
 This_will_cause_key_removal._Continue?=This will cause key removal. Continue anyway?
+
+Continue_discarding_all_changes?=Continue discarding all changes?
+
+Please_&specify_bundle_base_name\:=Please specify bundle base name\:
+
+Cannot_find_bundle_base_file=Cannot find bundle base file
+
+Discard_all_changes?=Discard all changes?
+
+Insert_bundle_base_name=Insert bundle base name
