*** empty log message ***

--- a/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/res.properties
+++ b/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/res.properties
@@ -20,55 +20,49 @@ Add_Locale=Add Locale
 
 Delete_Locale=Delete Locale
 
-Add_Entry=&Add Entry
+&Add_Entry=&Add Entry
 
-Delete_Entry=&Delete Entry
+&Delete_Entry=&Delete Entry
 
 Comment=Comment
-Value=&Value
+&Value=&Value
 
-Comment\:=&Comment\:
-Value\:=&Value\:
+&Comment\:=&Comment\:
+&Value\:=&Value\:
 
-&Open=Open
+&Open=&Open
 
-&File=File
+&File=&File
 
-&Save=Save
+&Save=&Save
 
-Save_&As_...=Save As ...
+Save_&As_...=Save &As ...
 
-E&xit=Exit
+E&xit=E&xit
 
-&Edit=Edit
-
-&Help=Help
+&Edit=&Edit
 
 Add_a_new_entry=Add a new entry
 
 Delete_an_entry=Delete an entry
 
-&Key=key
-
-&Value=Value
-
-&Comment=Comment
+Key=key
 
 Ok=Ok
 
 Cancel=Cancel
 
-Help=Help
+&Help=&Help
 
 New_entry=New entry
 
 New_resulting_locale\:=New resulting locale\:
 
-&Language_Code\:=Language Code\:
+Language_Code\:=Language Code\:
 
-&Country_Code\:=Country Code\:
+Country_Code\:=Country Code\:
 
-&Variant\:=Variant\:
+Variant\:=Variant\:
 
 Add_locale=Add locale
 
@@ -76,22 +70,70 @@ Select_language=Select language
 
 Select_country=Select country
 
-&Predefined_Locales\:=Predefined Locales\:
+Predefined_Locales\:=Predefined Locales\:
 
 Select_a_predefinned_Locale=Select a predefinned Locale
 
-&Add_Entry=Add Entry
-
-&Delete_Entry=Delete Entry
-
-This_will_cause_key_removal._Continue?=This will cause key removal. Continue anyway?
+This_will_cause_key_removal._Continue?=This will cause key removal. \\nContinue anyway?
 
 Continue_discarding_all_changes?=Continue discarding all changes?
 
-Please_&specify_bundle_base_name\:=Please specify bundle base name\:
+Please_&specify_bundle_base_name\:=Please s&pecify bundle base name\:
 
 Cannot_find_bundle_base_file=Cannot find bundle base file
 
 Discard_all_changes?=Discard all changes?
 
 Insert_bundle_base_name=Insert bundle base name
+
+Recent=Recent
+
+Entry_edit=Entry edit
+
+Key_removal=Key removal
+
+EDT=EDT
+
+Continue_deleting_locale?=Continue deleting locale?
+
+Modified=Modified
+
+key_removal=key removal
+
+value_change=value change
+
+&Find=&Find
+
+&Find\:=&Find\:
+
+&Close=&Close
+
+Find=Find
+
+&Find_text\:=&Find text\:
+
+&Match case=&Match case
+
+&Highlight=&Highlight
+
+&Backward=&Backward
+
+&Match_Whole_words_only=&Match Whole words only
+
+&Match case=&Match case
+
+&Match_case=&Match case
+
+&Language_Code\:=&Language Code\:
+
+&Country_Code\:=&Country Code\:
+
+&Variant\:=&Variant\:
+
+&Predefined_Locales\:=&Predefined_Locales\:
+
+&Key=&Key
+
+&Comment=&Comment
+
+Help=Help
