*** empty log message ***

--- a/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/res.properties
+++ b/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/res.properties
@@ -12,7 +12,7 @@ Delete Locale=Delete Locale
 
 Delete Locale=Delete Locale
 
-Delete Locale=Delete Locale
+Delete Delete
 
 Add Locale=Add Locale
 
@@ -139,3 +139,39 @@ Find=Find
 Help=Help
 
 comment_change=comment change
+
+&New=&New
+
+locale_addition=locale addition
+
+locale_removal=locale removal
+
+key_addition=key addition
+
+Existing_key._Overwrite?=Existing key. Overwrite?
+
+Duplicate_locale=Duplicate locale
+
+key_change=key change
+
+Key\:=Key\:
+
+Keys=Keys
+
+Default=Default
+
+&Cut=&Cut
+
+Cu&t=Cu&t
+
+Cut=Cut
+
+&Copy=&Copy
+
+Copy=Copy
+
+&Paste=&Paste
+
+Paste=Paste
+
+&Delete=&Delete
