*** empty log message ***

--- a/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/res.properties
+++ b/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/res.properties
@@ -148,7 +148,7 @@ locale_removal=locale removal
 
 key_addition=key addition
 
-Existing_key._Overwrite?=Existing key. Overwrite?
+Existing_key._Overwrite?=Existing key. \\nOverwrite?
 
 Duplicate_locale=Duplicate locale
 
@@ -175,3 +175,7 @@ Copy=Copy
 Paste=Paste
 
 &Delete=&Delete
+
+There_are_unsaved_changes._Would_you_like_to_save_them?=There are unsaved changes. \\nWould you like to save them?
+
+Confirm=Confirm
