--- a/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/res.properties
+++ b/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/res.properties
@@ -179,3 +179,36 @@ Paste=Paste
 There_are_unsaved_changes._Would_you_like_to_save_them?=There are unsaved changes. \\nWould you like to save them?
 
 Confirm=Confirm
+
+Rows_and_columns_count=Rows and columns count
+
+Editing_status=Editing status
+valueTextAreaTooltip=Edit here the value for a locale/entry
+
+commentTextAreaTooltip=Edit here the comment for a locale/entry
+
+currentKeyFieldTooltip=The current (selected) key
+NewToolbuttonTooltip=&New...
+
+Save_&As...=Save &As...
+
+Save_As...=Save As...
+
+Save...=Save...
+
+Open...=Open...
+Loading_application...=Loading application...
+
+Specify_bundle\:_base_name=Sp\u00E8ecify bundle base name
+
+System=System
+
+Detail=Detail
+
+About=About
+
+Property=Property
+
+Value=Value
+
+Product_information=Product information
