*** empty log message ***

--- a/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/res.properties
+++ b/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/res.properties
@@ -188,7 +188,7 @@ valueTextAreaTooltip=Edit here the value for a locale/entry
 commentTextAreaTooltip=Edit here the comment for a locale/entry
 
 currentKeyFieldTooltip=The current (selected) key
-NewToolbuttonTooltip=&New...
+NewToolbuttonTooltip=New...
 
 Save_&As...=Save &As...
 
@@ -212,3 +212,23 @@ Property=Property
 Value=Value
 
 Product_information=Product information
+
+Java_system=Java system
+
+Host_environment=Host environment
+
+Java=Java
+
+Host=Host
+
+Host_env_button_tooltip=Show host environment
+
+Java_properties_button_tooltip=Show Java system properties
+
+ProductVersionLabel=Product version\:
+
+ReleaseDateLabel=Release date\:
+
+=
+
+BuildLabel=Build\:
