*** empty log message ***

--- a/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/res.properties
+++ b/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/res.properties
@@ -221,7 +221,7 @@ Java=Java
 
 Host=Host
 
-Host_env_button_tooltip=Show host environment
+Host_env_button_tooltip=Show host system environment
 
 Java_properties_button_tooltip=Show Java system properties
 
