*** empty log message ***

--- a/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/res.properties
+++ b/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/res.properties
@@ -232,3 +232,23 @@ ReleaseDateLabel=Release date\:
 =
 
 BuildLabel=Build\:
+
+License=License
+
+Redo=Redo
+
+Undo=Undo
+Undo+SHORTCUT=Undo (Ctrl+Z)
+Redo+SHORTCUT=Redo (Ctrl+Y)
+
+Cut+SHORTCUT=Cut (Ctrl+X)
+
+Copy+SHORTCUT=Copy (Ctrl+C)
+
+Paste+SHORTCUT=Paste (Ctrl+V)
+
+NewToolbuttonTooltip+SHORTCUT=New...(Ctrl+N)
+
+Open...+SHORTCUT=Open... (Ctrl+O)
+
+Save...+SHORTCUT=Save... (Ctrl+S)
