*** empty log message ***

--- a/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/res.properties
+++ b/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/res.properties
@@ -252,3 +252,7 @@ NewToolbuttonTooltip+SHORTCUT=New...(Ctrl+N)
 Open...+SHORTCUT=Open... (Ctrl+O)
 
 Save...+SHORTCUT=Save... (Ctrl+S)
+
+set_null=set null
+
+edit=edit
