--- a/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/res.properties
+++ b/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/res.properties
@@ -229,8 +229,6 @@ ProductVersionLabel=Product version\:
 
 ReleaseDateLabel=Release date\:
 
-=
-
 BuildLabel=Build\:
 
 License=License
@@ -256,3 +254,7 @@ Save...+SHORTCUT=Save... (Ctrl+S)
 set_null=set null
 
 edit=edit
+
+&Tools=&Tools
+
+Log_console=&Log console
