--- a/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/res.properties
+++ b/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/res.properties
@@ -258,3 +258,13 @@ edit=edit
 &Tools=&Tools
 
 Log_console=&Log console
+
+Create_&backup_files=Create &backup files
+
+Disable_key_editing=&Disable key editing
+
+Options=Options
+
+Enable_key_editing=Enable &key editing
+
+&Options=&Options
