supporto suffisso di versione

--- a/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/release.properties
+++ b/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/release.properties
@@ -5,5 +5,6 @@ minor.version.number=9
 build.number=38
 build.date=2006-03-07 00\:23\:09.611
 major.version.number=0
-release.date=2006-02-25 00\:00\:00.000
+release.date=2006-03-07 00\:00\:00.000
 internal.name=urbe
+version.suffix=.1
