--- a/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/release.properties
+++ b/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/release.properties
@@ -1,10 +1,10 @@
 #Release properties
-#Wed Mar 08 00:57:24 CET 2006
+#Tue Apr 25 19:39:59 CEST 2006
 external.name=URBE
 minor.version.number=9
-build.number=41
+build.number=47
 major.version.number=0
-build.date=2006-03-08 00\:57\:24.694
-release.date=2006-03-07 00\:00\:00.000
+build.date=2006-04-25 19\:39\:59.318
+release.date=2006-04-04 00\:00\:00.000
 internal.name=urbe
-version.suffix=.1
+version.suffix=.2
