--- a/swdev/jtimekeeper/light/src/java/com/davidecavestro/timekeeper/gui/res.properties
+++ b/swdev/jtimekeeper/light/src/java/com/davidecavestro/timekeeper/gui/res.properties
@@ -297,6 +297,8 @@ from_to_format_short=MM/dd HH\:mm
 #formato lungo di visualizzazione per l'ora di inizio e fine avanzamento
 from_to_format_long=yy/MM/dd HH\:mm:ss
 
+date_format_short=yy/MM/dd
+
 table_header/Duration=Duration
 
 table_header/From=From
