--- a/swdev/jtimekeeper/light/src/java/com/davidecavestro/timekeeper/release.properties
+++ b/swdev/jtimekeeper/light/src/java/com/davidecavestro/timekeeper/release.properties
@@ -4,7 +4,8 @@ external.name=JTTSlite
 minor.version.number=0
 build.number=0
 major.version.number=2
-build.date=2006-11-05 09\:36\:55.332
-release.date=2006-11-01 00\:00\:00.000
+build.date=2007-01-28 00\:00\:00.000
+release.date=2007-01-28 00\:00\:00.000
+#release.date=2006-11-01 00\:00\:00.000
 internal.name=JTTS
-version.suffix=rc1
+version.suffix=a1
