--- a/swdev/jtimekeeper/light/src/java/com/davidecavestro/timekeeper/release.properties
+++ b/swdev/jtimekeeper/light/src/java/com/davidecavestro/timekeeper/release.properties
@@ -1,11 +1,11 @@
 #Release properties
-#Sun Nov 05 09:36:55 CET 2006
-external.name=JTTSlite
+#Sat Feb 10 19:03:14 CET 2007
 minor.version.number=0
-build.number=0
-major.version.number=2
-build.date=2007-01-28 00\:00\:00.000
-release.date=2007-01-28 00\:00\:00.000
-#release.date=2006-11-01 00\:00\:00.000
 internal.name=JTTS
+build.notes=Built by davide on Linux 2.6.17-10-generic i386
+external.name=JTTSlite
+build.number=250
+build.date=2007-02-10 19\:03\:14.651
+major.version.number=2
 version.suffix=a1
+release.date=2007-01-28 00\:00\:00.000
