--- a/swdev/jtimekeeper/light/src/java/com/davidecavestro/timekeeper/release.properties
+++ b/swdev/jtimekeeper/light/src/java/com/davidecavestro/timekeeper/release.properties
@@ -1,11 +1,11 @@
 #Release properties
-#Sat Feb 10 19:03:14 CET 2007
+#Mon Feb 12 23:58:38 CET 2007
 minor.version.number=0
 internal.name=JTTS
-build.notes=Built by davide on Linux 2.6.17-10-generic i386
+build.notes=Built with Java(TM) 1.5.0_05-b05 (Sun Microsystems Inc.) by davide on Linux i386 2.6.17-10-generic
 external.name=JTTSlite
-build.number=250
-build.date=2007-02-10 19\:03\:14.651
+build.number=256
+build.date=2007-02-12 23\:58\:38.071
 major.version.number=2
 version.suffix=a1
 release.date=2007-01-28 00\:00\:00.000
