--- a/timekeeperlight/src/java/com/davidecavestro/timekeeper/release-skeleton.properties
+++ b/timekeeperlight/src/java/com/davidecavestro/timekeeper/release-skeleton.properties
@@ -6,6 +6,6 @@ internal.name=JTTS
 external.name=JTTSlite
 
 major.version.number=2
-minor.version.number=1
-version.suffix=.2
-release.date=2007-06-16 00\:00\:00.000
+minor.version.number=3
+version.suffix=
+release.date=2007-07-22 00\:00\:00.000
