--- a/timekeeper-reports/src/dailyprogressesdetail.properties
+++ b/timekeeper-reports/src/dailyprogressesdetail.properties
@@ -1,6 +1,7 @@
 # Locale  for report dailyprogressesdetail.jrxml
 ReportTitle/Title/Daily_action_detail=Daily action detail
-ReportTitle/PageHeader/Daily_action_detail_for={0} - Daily action detail
+ReportTitle/PageHeader/Daily_action_detail_for={0} - Daily action detail from {1} to {2}
+ReportTitle/PageHeader/Data_extracted_for={0} - from {1} to {2}
 PageHeader/Title/Total=Total
 PeriodHeader/Title/Date=Date
 TaskBandHeader/Title/Task=Task
