--- a/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res.properties
+++ b/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res.properties
@@ -389,8 +389,8 @@ ReportDialog/ReportPresetName/Last_2_weeks=Last 2 weeks
 
 ReportDialog/ReportPresetName/This_month=This month
 
-ReportDialog/ReportPresetName/Last_month=Last month
-ReportDialog/ControlsGroup/ReportRootChoice=Extract data for
+ReportDialog/ReportPresetName/Previous_month=Previous month
+ReportDialog/ControlsGroup/ReportRootChoice=Filter data in task subtree
 
 ReportDialog/ReportRootChoice/Workspace_root=entire workspace
 
@@ -401,9 +401,9 @@ ReportDialog/CoiceControl/from=from
 ReportDialog/CoiceControl/to=to
 ReportDialog/ChoiceControl/custom=custom
 
-ReportDialog/ChoiceControl/presets=presets
+ReportDialog/ChoiceControl/presets=preset
 
-ReportDialog/ChoiceGroupTitle/Time_range=Time range
+ReportDialog/ChoiceGroupTitle/Time_range=Filter data in temporal range
 
 MainWindow/StatusBar/StatusLabel/RUNNING=RUNNING
 
@@ -415,7 +415,7 @@ RingChart/Tooltip/node_local_time=local
 
 RingChart/Tooltip/node_subtree_time=subtree
 
-PasteOptionsDialog/MainMessage=In relation to "{0}", paste task as
+PasteOptionsDialog/MainMessage=Paste task "{\!}" to "{0}" as
 
 PasteOptionsDialog/Title=Paste as...
 
@@ -424,3 +424,11 @@ GeneralChoice/PasteMode/as_last_child=as last child
 GeneralChoice/PasteMode/before=before
 
 GeneralChoice/PasteMode/after=after
+
+ReportDialog/LaunchButton/Confirm=Confirm
+
+ReportDialog/LaunchButton/Cancel=Cancel
+
+ReportDialog/Title/Reporting_panel=Reports panel
+
+ReportDialog/ControlTooltip/Preset_list_tooltip=Choose a preset time range
