--- a/timekeeperlight/src/java/com/davidecavestro/timekeeper/release-skeleton.properties
+++ b/timekeeperlight/src/java/com/davidecavestro/timekeeper/release-skeleton.properties
@@ -7,5 +7,5 @@ external.name=JTTSlite
 
 major.version.number=2
 minor.version.number=5
-version.suffix=
-release.date=2007-07-22 00\:00\:00.000
+version.suffix=.0.2
+release.date=2007-07-29 00\:00\:00.000
