--- a/timekeeperlight/nbproject/project.properties
+++ b/timekeeperlight/nbproject/project.properties
@@ -22,6 +22,7 @@ file.reference.commons-beanutils.jar=lib/commons-beanutils.jar
 file.reference.commons-collections.jar=lib/commons-collections.jar
 file.reference.commons-logging-api.jar=lib/commons-logging-api.jar
 file.reference.commons-logging.jar=lib/commons-logging.jar
+file.reference.itext-1.3.1.jar=lib/itext-1.3.1.jar
 file.reference.jasperreports-1.2.8.jar=lib/jasperreports-1.2.8.jar
 file.reference.jdo.jar=../common-libs/jdo.jar
 file.reference.jdom.jar=lib/jdom.jar
@@ -32,6 +33,7 @@ file.reference.jsci-xtra.jar=../common-libs/jsci-xtra.jar
 file.reference.looks-2.1.4.jar=lib/looks-2.1.4.jar
 file.reference.org-openide-awt.jar=lib/org-openide-awt.jar
 file.reference.org-openide-util.jar=lib/org-openide-util.jar
+file.reference.poi-2.0-final-20040126.jar=lib/poi-2.0-final-20040126.jar
 file.reference.swingx-2006_10_27.jar=lib/swingx-2006_10_27.jar
 file.reference.tinylaf.jar=lib/tinylaf.jar
 jar.compress=false
@@ -56,7 +58,9 @@ javac.classpath=\
     ${file.reference.looks-2.1.4.jar}:\
     ${file.reference.tinylaf.jar}:\
     ${file.reference.jsci-core.jar}:\
-    ${file.reference.jsci-xtra.jar}
+    ${file.reference.jsci-xtra.jar}:\
+    ${file.reference.itext-1.3.1.jar}:\
+    ${file.reference.poi-2.0-final-20040126.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-nowarn
 javac.deprecation=false
