--- a/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res.properties
+++ b/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res.properties
@@ -415,7 +415,7 @@ RingChart/Tooltip/node_local_time=local
 
 RingChart/Tooltip/node_subtree_time=subtree
 
-PasteOptionsDialog/MainMessage=Paste task "{\!}" to "{0}" as
+PasteOptionsDialog/MainMessage=Paste task "{1}" to "{0}" as
 
 PasteOptionsDialog/Title=Paste as...
 
