--- a/common/nbproject/project.properties
+++ b/common/nbproject/project.properties
@@ -17,13 +17,9 @@ dist.dir=dist
 dist.jar=${dist.dir}/common.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 file.reference.jhall.jar=../common-libs/jhall.jar
-file.reference.jsci-core.jar=../common-libs/jsci-core.jar
-file.reference.jsci-xtra.jar=../common-libs/jsci-xtra.jar
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jhall.jar}:\
-    ${file.reference.jsci-core.jar}:\
-    ${file.reference.jsci-xtra.jar}
+    ${file.reference.jhall.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
