--- a/timekeeperlight/nbproject/project.properties
+++ b/timekeeperlight/nbproject/project.properties
@@ -60,7 +60,8 @@ javac.classpath=\
     ${file.reference.jsci-core.jar}:\
     ${file.reference.jsci-xtra.jar}:\
     ${file.reference.itext-1.3.1.jar}:\
-    ${file.reference.poi-2.0-final-20040126.jar}
+    ${file.reference.poi-2.0-final-20040126.jar}:\
+    ${reference.common-charts.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-nowarn
 javac.deprecation=false
@@ -87,9 +88,11 @@ meta.inf.dir=${src.dir}/META-INF
 no.dependencies=true
 platform.active=default_platform
 project.common=../common
+project.common-charts=../common-charts
 project.timekeeper-reports=../timekeeper-reports
 project.timekeepercore=../timekeepercore
 project.timekeeperlight-icons=../timekeeperlight-icons
+reference.common-charts.jar=${project.common-charts}/dist/common-charts.jar
 reference.common.jar=${project.common}/dist/common.jar
 reference.timekeeper-reports.jar=${project.timekeeper-reports}/dist/timekeeper-reports.jar
 reference.timekeepercore.jar=${project.timekeepercore}/dist/timekeepercore.jar
