--- a/rbe/src/java/com/davidecavestro/rbe/release-skeleton.properties
+++ b/rbe/src/java/com/davidecavestro/rbe/release-skeleton.properties
@@ -1,11 +1,11 @@
 #Release properties skeleton
 
 #Nome utilizzato internamente. Utilizzato per il salvataggio della configurazione.
-internal.name=JTTS
+internal.name=urbe
 #Nome esterno/pubblico
-external.name=JTTSlite
+external.name=URBE
 
-major.version.number=2
-minor.version.number=5
-version.suffix=.0.2
-release.date=2007-07-29 00\:00\:00.000
+major.version.number=0
+minor.version.number=9
+version.suffix=.5.0
+release.date=2007-08-05 00\:00\:00.000
