--- a/rbe/nbproject/project.properties
+++ b/rbe/nbproject/project.properties
@@ -16,27 +16,27 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/rbe.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-file.reference.AbsoluteLayout.jar=src/swdev/resourcebundleeditor/deploy/lib/AbsoluteLayout.jar
+file.reference.AbsoluteLayout.jar=lib/AbsoluteLayout.jar
 file.reference.jh.jar=../common-libs/jh.jar
 file.reference.jhall.jar=../common-libs/jhall.jar
 file.reference.jhbasic.jar=../common-libs/jhbasic.jar
 file.reference.looks-2.1.4.jar=lib/looks-2.1.4.jar
-file.reference.org-openide-awt.jar=src/swdev/resourcebundleeditor/deploy/lib/org-openide-awt.jar
-file.reference.org-openide-util.jar=src/swdev/resourcebundleeditor/deploy/lib/org-openide-util.jar
+file.reference.org-openide-awt.jar-1=lib/org-openide-awt.jar
+file.reference.org-openide-util.jar-1=lib/org-openide-util.jar
 file.reference.rbe-src=src
 file.reference.swingx-2006_10_27.jar=lib/swingx-2006_10_27.jar
 jar.compress=false
 javac.classpath=\
-    ${file.reference.AbsoluteLayout.jar}:\
     ${libs.swing-layout.classpath}:\
+    ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.jh.jar}:\
     ${file.reference.jhall.jar}:\
     ${file.reference.jhbasic.jar}:\
     ${file.reference.looks-2.1.4.jar}:\
     ${file.reference.swingx-2006_10_27.jar}:\
-    ${file.reference.org-openide-awt.jar}:\
-    ${file.reference.org-openide-util.jar}:\
-    ${reference.common.jar}
+    ${reference.common.jar}:\
+    ${file.reference.org-openide-awt.jar-1}:\
+    ${file.reference.org-openide-util.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
