--- a/rbe/src/java/com/davidecavestro/rbe/gui/res.properties
+++ b/rbe/src/java/com/davidecavestro/rbe/gui/res.properties
@@ -1,20 +1,23 @@
-# Sample ResourceBundle properties file
 
-Add Locale=Add Locale
+#\ Sample ResourceBundle properties file
+Add=Locale\=Add Locale
 
-Add Locale=Add Locale
+#\ Sample ResourceBundle properties file
+Add=Locale\=Add Locale
 
-Delete Locale=Delete Locale
+Delete=Delete
 
-Add Locale=Add Locale
+#\ Sample ResourceBundle properties file
+Add=Locale\=Add Locale
 
-Delete Locale=Delete Locale
+Delete=Delete
 
-Delete Locale=Delete Locale
+Delete=Delete
 
-Delete Delete
+Delete=Delete
 
-Add Locale=Add Locale
+#\ Sample ResourceBundle properties file
+Add=Locale\=Add Locale
 
 Add_Locale=Add Locale
 
@@ -25,9 +28,11 @@ Delete_Locale=Delete Locale
 &Delete_Entry=&Delete Entry
 
 Comment=Comment
+
 &Value=&Value
 
 &Comment\:=&Comment\:
+
 &Value\:=&Value\:
 
 &Open=&Open
@@ -112,7 +117,7 @@ Find=Find
 
 &Find_text\:=&Find text\:
 
-&Match case=&Match case
+&Match=case\=&Match case
 
 &Highlight=&Highlight
 
@@ -120,7 +125,7 @@ Find=Find
 
 &Match_Whole_words_only=&Match Whole words only
 
-&Match case=&Match case
+&Match=case\=&Match case
 
 &Match_case=&Match case
 
@@ -130,7 +135,7 @@ Find=Find
 
 &Variant\:=&Variant\:
 
-&Predefined_Locales\:=&Predefined_Locales\:
+&Predefined_Locales\:=&Predefined locales\:
 
 &Key=&Key
 
@@ -183,11 +188,13 @@ Confirm=Confirm
 Rows_and_columns_count=Rows and columns count
 
 Editing_status=Editing status
+
 valueTextAreaTooltip=Edit here the value for a locale/entry
 
 commentTextAreaTooltip=Edit here the comment for a locale/entry
 
 currentKeyFieldTooltip=The current (selected) key
+
 NewToolbuttonTooltip=New...
 
 Save_&As...=Save &As...
@@ -197,6 +204,7 @@ Save_As...=Save As...
 Save...=Save...
 
 Open...=Open...
+
 Loading_application...=Loading application...
 
 Specify_bundle\:_base_name=Sp\u00E8ecify bundle base name
@@ -236,7 +244,9 @@ License=License
 Redo=Redo
 
 Undo=Undo
+
 Undo+SHORTCUT=Undo (Ctrl+Z)
+
 Redo+SHORTCUT=Redo (Ctrl+Y)
 
 Cut+SHORTCUT=Cut (Ctrl+X)
@@ -268,3 +278,7 @@ Options=Options
 Enable_key_editing=Enable &key editing
 
 &Options=&Options
+
+Application=Application
+
+Application_env_button_tooltip=Show host application environment
