--- a/rbe/nbproject/project.properties
+++ b/rbe/nbproject/project.properties
@@ -36,7 +36,8 @@ javac.classpath=\
     ${file.reference.swingx-2006_10_27.jar}:\
     ${reference.common.jar}:\
     ${file.reference.org-openide-awt.jar-1}:\
-    ${file.reference.org-openide-util.jar-1}
+    ${file.reference.org-openide-util.jar-1}:\
+    ${reference.rbe-icons.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,7 +63,9 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
 project.common=../common
+project.rbe-icons=../rbe-icons
 reference.common.jar=${project.common}/dist/common.jar
+reference.rbe-icons.jar=${project.rbe-icons}/dist/rbe-icons.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -73,4 +76,6 @@ run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
+src.help.dir=deploy/help
 src.java.dir=src/java
+src.license-contents.dir=deploy/license-contents
