--- a/rbe/nbproject/project.properties
+++ b/rbe/nbproject/project.properties
@@ -39,7 +39,7 @@ javac.classpath=\
     ${file.reference.org-openide-util.jar-1}:\
     ${reference.rbe-icons.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-Xlint:unchecked 
 javac.deprecation=false
 javac.source=1.5
 javac.target=1.5
