--- a/rbe/src/java/com/davidecavestro/rbe/gui/res.properties
+++ b/rbe/src/java/com/davidecavestro/rbe/gui/res.properties
@@ -282,3 +282,7 @@ Enable_key_editing=Enable &key editing
 Application=Application
 
 Application_env_button_tooltip=Show host application environment
+
+Keys_tree=Keys tree
+
+Complete_key=Complete key
