--- a/rbe/src/java/com/davidecavestro/rbe/gui/res.properties
+++ b/rbe/src/java/com/davidecavestro/rbe/gui/res.properties
@@ -286,3 +286,7 @@ Application_env_button_tooltip=Show host application environment
 Keys_tree=Keys tree
 
 Complete_key=Complete key
+
+ViewSelectionChoice.ChoiceValue.ClassicViewChoice=Classic
+
+ViewSelectionChoice.ChoiceValue.KeysTreeChoice=Keys tree
