ISSUE# 7 Visualizza percentuale contributo di ogni settore circolare nel grafico ad anello

--- a/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res.properties
+++ b/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res.properties
@@ -409,11 +409,11 @@ MainWindow/StatusBar/StatusLabel/RUNNING=RUNNING
 
 MainWindow/StatusBar/StatusLabel/IDLE=IDLE
 
-RingChart/Tooltip/node_total_time=total
+RingChart/Tooltip/node_total_time=Total
 
-RingChart/Tooltip/node_local_time=local
+RingChart/Tooltip/node_local_time=Local
 
-RingChart/Tooltip/node_subtree_time=subtree
+RingChart/Tooltip/node_subtree_time=Subtree
 
 PasteOptionsDialog/MainMessage=Paste task "{1}" to "{0}" as
 
@@ -432,3 +432,17 @@ ReportDialog/LaunchButton/Cancel=Cancel
 ReportDialog/Title/Reporting_panel=Reports panel
 
 ReportDialog/ControlTooltip/Preset_list_tooltip=Choose a preset time range
+
+ViewSelectionChoice.ChoiceValue.KeysTreeChoice=Keys tree
+
+ViewSelectionChoice.ChoiceValue.ClassicViewChoice=Classic
+
+task.removal.confirm.message=Do you really want to remove all selected tasks?
+
+task.removal.confirm.dialogtitle=Confirm task removal
+
+action.removal.confirm.message=Do you really want to remove all selected actions?
+
+action.removal.confirm.dialogtitle=Confirm action removal
+
+RingChart/Tooltip/parent_percentage=Sup. %
