--- a/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res.properties
+++ b/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/res.properties
@@ -63,7 +63,7 @@ table_header/Duration=Duration
 
 &Description=&Description
 
-New_progress=New action
+New_progress=Add action
 
 &Edit=&Edit
 
@@ -125,7 +125,7 @@ new_task=new task
 
 delete_task=delete task
 
-new_action=new action
+new_action=add action
 
 start_action=start action
 
@@ -271,7 +271,7 @@ Expand=Expand
 
 Start_action=Start action
 
-New_action=New action
+New_action=Add action
 
 IDLE=IDLE
 
@@ -433,10 +433,6 @@ ReportDialog/Title/Reporting_panel=Reports panel
 
 ReportDialog/ControlTooltip/Preset_list_tooltip=Choose a preset time range
 
-ViewSelectionChoice.ChoiceValue.KeysTreeChoice=Keys tree
-
-ViewSelectionChoice.ChoiceValue.ClassicViewChoice=Classic
-
 task.removal.confirm.message=Do you really want to remove all selected tasks?
 
 task.removal.confirm.dialogtitle=Confirm task removal
@@ -446,3 +442,27 @@ action.removal.confirm.message=Do you really want to remove all selected actions
 action.removal.confirm.dialogtitle=Confirm action removal
 
 RingChart/Tooltip/parent_percentage=Sup. %
+
+ReportDialog/ControlsGroup/ReportChoice=Launch report
+
+ReportDialog/ReportCHoice/DailyActionsList=Daily sctions list
+
+ReportDialog/ReportCHoice/DailyProgressesDetail=Daily task detail
+
+TrayIcon/Tooltip/Pause=No active tasks
+
+TrayIcon/Tooltip/Working=Running {0} ({1})
+
+TrayIcon/MenuItem/Label/Start_action=Start action
+
+TrayIcon/MenuItem/Label/Stop_action=Stop action
+
+TrayIcon/MenuItem/Label/Exit=Exit
+
+TrayIcon/MenuItem/Label/Show=Show
+
+SystemTray/InfoMesage/Message/Idle_15_minutes=15 minutes have gone without any job tracking\!
+
+SystemTray/InfoMesage/Title/Idle_15_minutes=Reminder
+
+TrayIcon/Tooltip/Pause_on_task=Idle on {0}
