--- a/timekeeperlight/nbproject/project.properties
+++ b/timekeeperlight/nbproject/project.properties
@@ -65,8 +65,8 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=-nowarn
 javac.deprecation=false
-javac.source=1.5
-javac.target=1.5
+javac.source=1.6
+javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -86,7 +86,7 @@ main.class=com.davidecavestro.timekeeper.Launcher
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 no.dependencies=true
-platform.active=default_platform
+platform.active=Java_HotSpot_TM__Client_VM_1.6.0_03-b05
 project.common=../common
 project.common-charts=../common-charts
 project.timekeeper-reports=../timekeeper-reports
