Contenuti nuove release

--- a/timekeeperlight/nbproject/project.properties
+++ b/timekeeperlight/nbproject/project.properties
@@ -63,10 +63,10 @@ javac.classpath=\
     ${file.reference.poi-2.0-final-20040126.jar}:\
     ${reference.common-charts.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=-nowarn
+javac.compilerargs=-nowarn -target 1.5
 javac.deprecation=false
-javac.source=1.6
-javac.target=1.6
+javac.source=1.5
+javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -86,7 +86,7 @@ main.class=com.davidecavestro.timekeeper.Launcher
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 no.dependencies=true
-platform.active=Java_HotSpot_TM__Client_VM_1.6.0_03-b05
+platform.active=default_platform
 project.common=../common
 project.common-charts=../common-charts
 project.timekeeper-reports=../timekeeper-reports
