--- a/common/nbproject/project.properties
+++ b/common/nbproject/project.properties
@@ -21,7 +21,7 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jhall.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-target 1.5
 javac.deprecation=false
 javac.source=1.5
 javac.target=1.5
